# cryptoys

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: historical.rs  lib.rs  main.rs  utils.rs
src/hashing/: md5.rs
src/historical/: README.md  affine.rs  atbash.rs  caesar.rs  common_traits.rs  mod.rs  playfair.rs  rot13.rs
src/key/: mod.rs  otp.rs
src/keys/: otp.rs
tests/: historical_test.rs  key_test.rs
