[package]
name = "cryptoys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a cryptographic library filled with cryptographic toys(mostly historical ciphers)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modinverse = "0.1.1"
